--- a/ereuse_devicehub/templates/ereuse_devicehub/user_profile.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/user_profile.html
@@ -107,17 +107,23 @@
             </div>
 
             <div class="tab-pane fade pt-3" id="id_abac_attrs">
+              {% if current_user.get_abac_did() %}
               <div class="row mb-3">
                 <label class="col-md-4 col-lg-3 col-form-label">Did</label>
                 <div class="col-md-8 col-lg-9">
-                  {{ current_user.get_abac_did() }}
+                  <a href="https://explorer.stable.iota-ec.net/custom/identity-resolver/{{ current_user.get_abac_did() }}" target="_blank">{{ current_user.get_abac_did() }}</a>
                 </div>
               </div>
+              {% endif %}
               {% for k, v in current_user.get_abac_attributes().items() %}
               <div class="row mb-3">
                 <label class="col-md-4 col-lg-3 col-form-label">{{ k }}</label>
                 <div class="col-md-8 col-lg-9">
+                  {% if v[:4] == 'http' %}
+                  <a href="{{ v }}" target="_blank">{{ v }}</a>
+                  {% else %}
                   {{ v }}
+                  {% endif %}
                 </div>
               </div>
               {% endfor %}
