flow for connect to wallet

--- a/ereuse_devicehub/modules/did/templates/anonymous.html
+++ b/ereuse_devicehub/modules/did/templates/anonymous.html
@@ -227,7 +227,7 @@
         {% if oidc %}
         <br />
         <a class="btn btn-primary mt-3" type="button" href="{{ url_for('oidc.login_other_inventory') }}?next={{ path }}">
-          User of other inventory
+          Use a wallet
         </a>
         {% endif %}
       </div>
