change url of iota explorer

--- a/ereuse_devicehub/templates/ereuse_devicehub/user_profile.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/user_profile.html
@@ -111,7 +111,7 @@
               <div class="row mb-3">
                 <label class="col-md-4 col-lg-3 col-form-label">Did</label>
                 <div class="col-md-8 col-lg-9">
-                  <a href="https://explorer.stable.iota-ec.net/custom/identity-resolver/{{ current_user.get_abac_did() }}" target="_blank">{{ current_user.get_abac_did() }}</a>
+                  <a href="https://explorer.stable.iota-ec.net/custom/search/{{ current_user.get_abac_did() }}" target="_blank">{{ current_user.get_abac_did() }}</a>
                 </div>
               </div>
               {% endif %}
