add action Recycled with dlt proof

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -232,6 +232,12 @@
                       E-Waste
                     </a>
                   </li>
+                  <li>
+                    <a href="javascript:newAction('Recycled')" class="dropdown-item">
+                      <i class="bi bi-recycle"></i>
+                      Recycled
+                    </a>
+                  </li>
                 </ul>
               </div>
 
