first step for the impact inform

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -279,6 +279,12 @@
                       Device Sanitization
                     </a>
                   </li>
+                  <li>
+                    <a href="javascript:export_file('impact')" class="dropdown-item">
+                      <i class="bi bi-eraser-fill"></i>
+                      Impact Inform
+                    </a>
+                  </li>
                 </ul>
               </div>
 
