--- a/ereuse_devicehub/templates/inventory/device_create.html
+++ b/ereuse_devicehub/templates/inventory/device_create.html
@@ -235,7 +235,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="appearance" value="A"
                         {% if form.appearance.data == 'A' %}checked="checked"{% endif %}>
-                        <label class="form-check-label">A. Like new (no visual damage))</label>
+                        <label class="form-check-label">A. Like new (no visual damage)</label>
                       </div>
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="appearance" value="B"
@@ -245,7 +245,7 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="appearance" value="C"
                         {% if form.appearance.data == 'C' %}checked="checked"{% endif %}>
-                        <label class="form-check-label">C. In good condition (small visual damage to easy-to-detect parts, not the screen))</label>
+                        <label class="form-check-label">C. In good condition (small visual damage to easy-to-detect parts, not the screen)</label>
                       </div>
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="appearance" value="D"
@@ -257,7 +257,7 @@
                         {% if form.appearance.data == 'E' %}checked="checked"{% endif %}>
                         <label class="form-check-label">E. It is unacceptable (substantial visual damage that may affect use)</label>
                       </div>
-                      <small class="text-muted form-text">Rate the imperfections that affect the device aesthetically, but not its use.</small>
+                      <small class="text-muted form-text">Rate the aesthetic imperfections affecting the device, but not its functionality.</small>
                       {% if form.appearance.errors %}
                       <p class="text-danger">
                         {% for error in form.appearance.errors %}
@@ -289,7 +289,7 @@
                         {% if form.functionality.data == 'D' %}checked="checked"{% endif %}>
                         <label class="form-check-label">D. Multiple buttons do not work properly; the screen has severe damage that may affect use</label>
                       </div>
-                      <small class="text-muted form-text">It qualifies the defects of a device that affect its use.</small>
+                      <small class="text-muted form-text">Rate the defects of the device that affect its functionality.</small>
                       {% if form.functionality.errors %}
                       <p class="text-danger">
                         {% for error in form.functionality.errors %}
@@ -315,7 +315,7 @@
                     <div class="from-group has-validation mb-2">
                       <label for="model" class="form-label">{{ form.version.label }}</label>
                       {{ form.version(class_="form-control") }}
-                      <small class="text-muted form-text">The version code o fthis device, like 'v1' or 'A001'.</small>
+                      <small class="text-muted form-text">The version code of this device, like 'v1' or 'A001'.</small>
                       {% if form.version.errors %}
                       <p class="text-danger">
                         {% for error in form.version.errors %}
